# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: contest_grid.csv  houseworks.csv  test_users.csv  testi_contest.csv  testi_housework.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoalyselvitys.md  testaus.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: luetutapp.py  opintoseuranta.py
src/data/: users.csv
src/repositories/: contest_repository.py  housework_repository.py  user_repository.py
src/services/: contest_service.py  housework_service.py  user_service.py
src/tests/: housework_repository_test.py  luetutapp_test.py  ui_test.py  user_repository_test.py  user_service_test.py
src/ui/: app_view.py  ui.py
